Mudanças no index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     </head>
     <body>
-        <h1>Projeto da Vera Pontes</h1>
+        <h1>Projeto da Vera Pontes - Novo</h1>
+        <h1>Uma inclusão</h1>
     </body>
 </html>
